--- a/CodeJam/CodeJam.2018/CodeJam.Year2018.csproj
+++ b/CodeJam/CodeJam.2018/CodeJam.Year2018.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CodeJam.Shared\CodeJam.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
